# supervised-reinforcement-learning-with-recurrent-neural-network-for-dynamic-medication-treatment

./: .env.example  .gitignore  Makefile  README.md  environment.yml  main.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy.yaml  train.yaml
configs/: base.yaml  experiment_01.yaml  sweep.yaml
data/: CREATE TABLE mimic-iii-srl-rnn.SRL_RNN.sql  Final_Labels.csv  IMPUTED_FINAL.csv  Perscription_Table_filtered_Chosen_ATC.csv  Static_Variables.py  Static_var_height_weight.csv  Time_series_variables.csv  Top-medication-drug-names.csv  Top-medication.csv  final_NDC_ATC_df.csv  final_filtered_df_method2.csv  final_filtered_df_method2_IMPUTED.csv  fio2.sql  ndc_w_no_ATC.csv  pH.sql  static_matrices.pkl  time_series_matrices.pkl  time_series_variable.sql  top_2000_diagnoses.csv  treatment_matrices.pickle  unique_chosen_atc.csv  urineout.sql
deploy/: Dockerfile  export.py  inference.py  requirements.txt  serve.py
infra/cdk/: stack.py
infra/terraform/: main.tf  variables.tf
monitoring/: alerts.yaml  dashboard.json  drift.py
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model_prototype.ipynb  04_results.ipynb
src/: __init__.py  config.py  data.py  evaluate.py  loss.py  metrics.py  model.py  plots.py  train.py  utils.py
tests/: conftest.py  test_config.py  test_data.py  test_inference.py  test_metrics.py  test_model.py  test_train.py  test_utils.py
